Use `new Thread` instead of `Thread.ofPlatform`
This is functionally equivalent but is a change that reduces unnessecary
dependency on the new API, potentially allowing the easy adaptation to
target an older JVM release version in the future.

Signed-off-by: Mahied Maruf <contact@mechite.com>